<resources>
    <string name="app_name">PersonalBest</string>
    <string name="defaultnum"></string>
    <string name="goal_label">GOAL</string>
    <string name="complete_label">COMPLETE</string>
    <string name="remaining_label">REMAINING</string>
    <string name="start_button_label">START</string>
    <string name="end_button_label">END</string>
    <string name="exercise_label">Exercising!!!</string>
    <string name="exercise_step_label">Exercise Steps:   </string>
    <string name="exercise_time_label">Exercise Time:   </string>
    <string name="exercise_speed_label">Exercise Speed:   </string>
    <string name="tmp_update_label">Update Data</string>
    <string name="history_label">Walk history</string>
    <string name="go_back_button">Go back</string>
    <string name="change_goal_button">CHANGE GOAL</string>
    <string name="friend_list_button">Friend List</string>
    <string name="set_email_button">Set Email</string>
</resources>
